Made popup look nicer

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Crunchyroll Full Screen, All The Time",
   "description": "This extension keeps the anime streaming site Crunchyroll fullscreen while autoplaying. Click on a show, click on the toggle button, and press F11, and enjoy your binge.",
-  "version": "0.4",
+  "version": "0.5",
   "content_scripts": [
     {
       "matches": [
@@ -16,9 +16,7 @@
     "default_title": "Crunchyroll Fullscreen",
     "default_popup": "popup.html"
   },
-  "permissions": [
-    "storage"
-  ],
+  "permissions": ["storage"],
   "background": {
     "scripts": ["background.js"],
     "persistant": false
